# advent-of-code-2022

.devcontainer/: devcontainer.json
calc/: CHANGELOG.md  calc.cabal
calc/tests/: BasicSumTest.hs
d01/: d01.cabal
d01/app/: Main.hs
d01/lib/: d01.hs
d01/tests/: d01Tests.hs
d02/: d02.cabal
d02/app/: Main.hs
d02/lib/: d02.hs
d02/tests/: d02Tests.hs
