cabal-version:      2.4
name:               calc
version:            0.1.0.0
author:             Petru Cervac
maintainer:         petru.cervac@gmail.com
extra-source-files: CHANGELOG.md

library calc-lib
    exposed-modules: BasicSum
    hs-source-dirs: lib
    build-depends:    base ^>=4.16.4.0
    default-language: Haskell2010

test-suite calc-tests
    type: exitcode-stdio-1.0
    extensions: ImportQualifiedPost
    main-is: BasicSumTest.hs
    hs-source-dirs: tests
    build-depends: base ^>=4.16.4.0, HUnit ^>=1.6 , calc-lib
    default-language: Haskell2010
